# ModemManager

./: .clang-format  .gitlab-ci.yml  .pre-commit-config.yaml  DIR_METADATA  OWNERS  README.chromium  configure.ac  meson.build  meson_post_install.py  unblocked_terms.txt
cli/: Makefile.am  meson.build  mmcli-bearer.c  mmcli-common.c  mmcli-modem-3gpp.c  mmcli-modem-location.c  mmcli-modem-rf.c  mmcli-modem-sar.c  mmcli-modem-signal.c  mmcli-modem.c  mmcli-output.c  mmcli-output.h  mmcli-sim.c  mmcli.c  mmcli.h
data/: Makefile.am  ModemManager.service.in  org.freedesktop.ModemManager1.conf.polkit  org.freedesktop.ModemManager1.service.in
include/: ModemManager-enums.h  ModemManager-tags.h
introspection/: Makefile.am  all.xml  meson.build  org.freedesktop.ModemManager1.Bearer.xml  org.freedesktop.ModemManager1.Modem.Location.xml  org.freedesktop.ModemManager1.Modem.Modem3gpp.xml  org.freedesktop.ModemManager1.Modem.Rf.xml  org.freedesktop.ModemManager1.Modem.Sar.xml  org.freedesktop.ModemManager1.Modem.Signal.xml  org.freedesktop.ModemManager1.Modem.Simple.xml  org.freedesktop.ModemManager1.Modem.xml  org.freedesktop.ModemManager1.Sim.Eap.xml  org.freedesktop.ModemManager1.Sim.Uicc.xml  org.freedesktop.ModemManager1.Sim.xml  org.freedesktop.ModemManager1.Sms.xml  org.freedesktop.ModemManager1.SmsPart.xml
libmm-glib/: Makefile.am  libmm-glib.h  meson.build  mm-3gpp-profile.c  mm-3gpp-profile.h  mm-bearer-properties.c  mm-bearer-properties.h  mm-bearer-stats.c  mm-bearer-stats.h  mm-sim.c  (+22 more)
libqcdm/: meson.build
libqcdm/src/: meson.build
libqcdm/tests/: meson.build
(+211 files in other folders)
